[package]
name = "balance_tracker_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
dirs="4"
env_logger = "0.9"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
json = "0.12"
json5="0.4.1"
log = "0.4"
futures="0.3"
serde = { version = "1.0", features = ["derive"] }
actix-cors = "0.6.2"
serde_json = "1.0"
chrono = {version = "0.4.22", features = ["serde"] }
url-escape = "0.1"
mongodb = {version = "2.3.0", features = ["bson-chrono-0_4"] }
itertools= "0.10"
actix-web-static-files = "4.0"
static-files = "0.2.1"

[build-dependencies]
static-files = "0.2.1"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
